<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application Chat</string>
    <string name="agora_app_id" translatable="false">0e60d546ee0149bb906961477af057f2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="next1">Next1</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="name1">Name1</string>
    <string name="status">status</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="make_account_with_some_other_number">Make account with some other number</string>
    <string name="delete_my_account">Delete my Account</string>
    <string name="remove_my_complete_about_from_this_app">Remove my complete about from this app</string>
    <string name="send_an_invitation_to_your_friends_to_have_a_chat">Send an invitation to your friends to have a chat…</string>
    <string name="user_info">User Info</string>
    <string name="enter_your_username_for_just_chat">(enter your username for Just Chat)</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_contacts">This is not your username or pin. This name will be visible to your contacts</string>
    <string name="about1">About1</string>
    <string name="i_am_on_just_chat">I am on Just Chat</string>
    <string name="phone">Phone</string>
    <string name="about">About</string>
    <string name="enter_your_thoughts_here">Enter your Thoughts Here</string>
    <string name="cancel1">Cancel1</string>
    <string name="save1">Save1</string>
    <string name="enter_name">Enter your Name</string>
    <string name="enter_here">Enter Here</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="profile_photo1">Profile Photo1</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="_12_02_12_01_02_p_m">12/02/12 01:02 p.m.</string>
    <string name="message">message</string>
    <string name="description0">Description0</string>
    <string name="text_message1">Text Message</string>
    <string name="text_message">Text Message</string>
    <string name="description">Description</string>
    <string name="new_group">New Group</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="username_">Username</string>
    <string name="username1">Username1</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="remove_complete_info_from_the_app">remove complete info from the app</string>
    <string name="active_4h_ago">Active 4h ago</string>
    <string name="username">Username</string>
    <string name="active_5h_ago">Active 5h ago</string>
    <string name="title_activity_select_language">title activity select language</string>

</resources>