<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/new_group"
        android:id="@+id/new_group"
        app:showAsAction="never"
        ></item>

    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        app:showAsAction="never"
        ></item>

    <item
        android:title="@string/log_out"
        android:id="@+id/log_out"
        app:showAsAction="never"
        ></item>

    <item
        android:title="Search"
        android:id="@+id/search"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        ></item>

</menu>