<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/about_textview"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_thoughts_here"
        android:id="@+id/about_edittext"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/white"
            android:textColor="@color/darkblue"
            android:id="@+id/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/save"
            android:backgroundTint="@color/white"
            android:textColor="@color/darkblue"
            android:id="@+id/save"/>
    </LinearLayout>

</LinearLayout>