<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.login_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp"
        android:id="@+id/linear_layout">

    <com.hbb20.CountryCodePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/ccp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_mobile_number"
            android:textStyle="bold"
            android:id="@+id/mobileNumber"
            android:inputType="phone"
            android:maxLines="1"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:id="@+id/contdBtn"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_otp"
        android:textAlignment="center"
        android:maxLines="1"
        android:maxLength="6"
        android:textStyle="bold"
        android:id="@+id/otpText"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:id="@+id/verifyBtn"
        android:visibility="invisible"/>

</RelativeLayout>