<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.settings_activity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar">

        <include
            layout="@layout/toolbar_layout"
            android:id="@+id/toolbar"
            ></include>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/app_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:id="@+id/user_profile">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/pr"
            android:id="@+id/profile_image"/>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#E6E6E6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/change_number"
                android:id="@+id/change_number_icon"
                app:tint="@color/darkblue" />

            <LinearLayout
                android:id="@+id/options_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/options_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_mobile_number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/options_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_account_with_some_other_number"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#E6E6E6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:id="@+id/delete_layout">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_baseline_delete_24"
                android:id="@+id/delete_icon"
                app:tint="@color/darkblue"/>

            <LinearLayout
                android:id="@+id/options_linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/delete_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_my_account"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/delete_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_complete_info_from_the_app"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#E6E6E6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/invite"
                android:id="@+id/invite_icon"
                app:tint="@color/darkblue"/>

            <LinearLayout
                android:id="@+id/options_linear_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_a_friend"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/invite_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_an_invitation_to_your_friends_to_have_a_chat"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch App Theme"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:id="@+id/switch_btn"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:visibility="invisible" />

</RelativeLayout>