<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.UserProfile_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar">

        <androidx.appcompat.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:id="@+id/status_bar"
            app:title="User Profile"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/image">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/pr"
            android:scaleType="centerCrop"
            android:transitionName="image"
            android:id="@+id/profile_image"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:elevation="1dp"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:layout_alignEnd="@+id/profile_image"
            android:layout_alignBottom="@+id/profile_image"
            app:tint="@color/white"
            android:id="@+id/fab"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/username_layout">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_person_24"
            app:tint="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#292727"
                    android:textSize="15sp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:background="@drawable/flag_transparent"/>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:id="@+id/name"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_contacts"
                android:layout_marginTop="10dp"
                android:textColor="#2f4f4f"
                android:textSize="15sp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EAEAEA"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/about_layout">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_about_24"
            app:tint="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="#292727"
                    android:textSize="15sp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:background="@drawable/flag_transparent"/>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_am_on_just_chat"
                android:id="@+id/about"
                android:textColor="@color/black"
                android:textSize="17sp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EAEAEA"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/phone_layout">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_phone_24"
            app:tint="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#292727"
                    android:textSize="15sp"/>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="##### #####"
                android:id="@+id/phone"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>